--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Dhubad Media</title>
 </head>
 <body>
-    <div class="display:flex; align-item:center; justify-content:center; background-color: black; color:white">
+    <div style="display:flex; align-items:center; justify-content:center; background-color: black; color:white">
         <h2>Coming Soon...</h2>
     </div>
 </body>
