--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dhubad Media</title>
 </head>
-<body>
-    <div style="display:flex; align-items:center; justify-content:center; background-color: black; color:white">
+<body style="display:flex; align-items:center; justify-content:center; background-color: rgb(111, 61, 61); color:white; height: 100vh;">
         <h2>Coming Soon...</h2>
-    </div>
+        <h5 style="font-style: italic;">Dhubad Media</h5>
 </body>
 </html>
