--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dhubad Media</title>
 </head>
-<body style="display:flex; align-items:center; justify-content:center; background-color: rgb(111, 61, 61); color:white; height: 100vh;">
+<body style="display:flex; flex-direction: column; align-items:center; justify-content:center; background-color: rgb(111, 61, 61); color:white; height: 100vh;">
         <h2>Coming Soon...</h2>
         <h5 style="font-style: italic;">Dhubad Media</h5>
 </body>
